third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/script_uses_itself.move
script {
    fun main() {
        let _f: || has drop = main;
        let _g: || has drop = || main();
        (main)();
        main();
    }
}
